// Vitest Snapshot v1

exports[`<Logo /> > renders consistently with extra props 1`] = `
<body>
  <div>
    <figure
      class="logo s-neTQd9cjuaSA"
    >
      <a
        class="s-neTQd9cjuaSA"
        href="#"
        title="whatever"
      >
        <!--?xml version="1.0" encoding="UTF-8"?-->
        

        <svg
          preserveAspectRatio="xMinYMin slice"
          viewBox="0 0 960 280"
          xmlns="http://www.w3.org/2000/svg"
        >
          &gt;
  
          <path
            class="r one"
            d="m60,100v60l30,30-30,30-30-30v-60L0,100l30-30,30,30Zm60,0l-30-30-30,30,30,30,30-30Z"
            style="--transition-index: 1"
          />
          
  
          <path
            class="y"
            d="m190,190l-30,30-30-30v-20l-30-30,30-30,30,30v20l30,30Zm-30-90l30,30v120l30-30v-120l-30-30-30,30Zm-30,150l30,30,30-30-30-30-30,30Z"
            style="--transition-index: 2"
          />
          
  
          <path
            class="a"
            d="m320,160l30,30-30,30-30-30v-60l-30-30,30-30,30,30v60Zm-60-60l-30,29v61l30,30,30-30-30-30v-60Z"
            style="--transition-index: 3"
          />
          
  
          <path
            class="n"
            d="m380,160l30,30-30,30-30-30v-60l-30-30,30-30,30,30v60Zm90,30l-30,30-30-30v-60l-30-30,30-30,30,30v60l30,30Z"
            style="--transition-index: 4"
          />
          
  
          <path
            class="f"
            d="m530,30v220l-30,30-30-30,30-30V60l30-30Zm60,0l-30-30-30,30,30,30,30-30Zm-30,40l-30,30,30,30,30-30-30-30Z"
            style="--transition-index: 5"
          />
          
  
          <path
            class="i"
            d="m600,160l30,30-30,30-30-30v-50l30-30v50Z"
            style="--transition-index: 6"
          />
          
  
          <path
            class="l one"
            d="m660,160l30,30-30,30-30-30V60l-30-30,30-30,30,30v130Z"
            style="--transition-index: 7"
          />
          
  
          <path
            class="l two"
            d="m720,160l30,30-30,30-30-30V60l-30-30,30-30,30,30v130Z"
            style="--transition-index: 8"
          />
          
  
          <path
            class="e"
            d="m780,100v60l30,30-30,30-30-30v-61l30-29Zm0,0l20,20-20,20,30,30,30-30-20-20,20-20-30-30-30,30Z"
            style="--transition-index: 9"
          />
          
  
          <path
            class="r two"
            d="m900,100v60l30,30-30,30-30-30v-60l-30-30,30-30,30,30Zm60,0l-30-30-30,30,30,30,30-30Z"
            style="--transition-index: 10"
          />
          

        </svg>
        

      </a>
    </figure>
    <!--&lt;Logo&gt;-->
  </div>
</body>
`;

exports[`<Logo /> > renders consistently with no props 1`] = `
<body>
  <div>
    <figure
      class="logo s-neTQd9cjuaSA"
    >
      <!--?xml version="1.0" encoding="UTF-8"?-->
      

      <svg
        preserveAspectRatio="xMinYMin slice"
        viewBox="0 0 960 280"
        xmlns="http://www.w3.org/2000/svg"
      >
        &gt;
  
        <path
          class="r one"
          d="m60,100v60l30,30-30,30-30-30v-60L0,100l30-30,30,30Zm60,0l-30-30-30,30,30,30,30-30Z"
          style="--transition-index: 1"
        />
        
  
        <path
          class="y"
          d="m190,190l-30,30-30-30v-20l-30-30,30-30,30,30v20l30,30Zm-30-90l30,30v120l30-30v-120l-30-30-30,30Zm-30,150l30,30,30-30-30-30-30,30Z"
          style="--transition-index: 2"
        />
        
  
        <path
          class="a"
          d="m320,160l30,30-30,30-30-30v-60l-30-30,30-30,30,30v60Zm-60-60l-30,29v61l30,30,30-30-30-30v-60Z"
          style="--transition-index: 3"
        />
        
  
        <path
          class="n"
          d="m380,160l30,30-30,30-30-30v-60l-30-30,30-30,30,30v60Zm90,30l-30,30-30-30v-60l-30-30,30-30,30,30v60l30,30Z"
          style="--transition-index: 4"
        />
        
  
        <path
          class="f"
          d="m530,30v220l-30,30-30-30,30-30V60l30-30Zm60,0l-30-30-30,30,30,30,30-30Zm-30,40l-30,30,30,30,30-30-30-30Z"
          style="--transition-index: 5"
        />
        
  
        <path
          class="i"
          d="m600,160l30,30-30,30-30-30v-50l30-30v50Z"
          style="--transition-index: 6"
        />
        
  
        <path
          class="l one"
          d="m660,160l30,30-30,30-30-30V60l-30-30,30-30,30,30v130Z"
          style="--transition-index: 7"
        />
        
  
        <path
          class="l two"
          d="m720,160l30,30-30,30-30-30V60l-30-30,30-30,30,30v130Z"
          style="--transition-index: 8"
        />
        
  
        <path
          class="e"
          d="m780,100v60l30,30-30,30-30-30v-61l30-29Zm0,0l20,20-20,20,30,30,30-30-20-20,20-20-30-30-30,30Z"
          style="--transition-index: 9"
        />
        
  
        <path
          class="r two"
          d="m900,100v60l30,30-30,30-30-30v-60l-30-30,30-30,30,30Zm60,0l-30-30-30,30,30,30,30-30Z"
          style="--transition-index: 10"
        />
        

      </svg>
      

      
    </figure>
    <!--&lt;Logo&gt;-->
  </div>
</body>
`;
